# DjangoUpStorageBackend

./: .gitignore  LICENSE.txt  README.md  README.rst  db.sqlite3  requirements.txt  setup.cfg  setup.py
django-upstorage-backend/storages/: __init__.py  backends.py
storages/: backends.py  utils.py
testapp/: settings.py  urls.py
testupload/: apps.py  models.py  views.py
testupload/migrations/: 0001_initial.py
testupload/templates/testupload/: upload_view.html
