[metadata]
name = django-upstorage-backend
version = 0.3
description = A Django custom storage for UpStorage.
long_description = file: README.rst
url = https://www.example.com/
author = Its_Sakib
author_email = yourname@example.com
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: X.Y  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
